
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pid_t ;


 int WEXITSTATUS (int) ;
 scalar_t__ WIFEXITED (int) ;
 scalar_t__ WIFSIGNALED (int) ;
 int WTERMSIG (int) ;
 int abort () ;
 int errno ;
 int exec_vuln () ;
 int exit (int) ;
 int fork () ;
 int fprintf (int ,char*,...) ;
 int stderr ;
 int stdout ;
 char* strerror (int ) ;
 int wait (int*) ;

int
tease()
{
      pid_t pid;
      pid_t wpid;
      int status;

      pid = fork();

      if (pid == -1)
      {
          fprintf(stderr, "[-] %s: Failed to fork()\n",strerror(errno));
          exit(13);
      }
      else if (pid == 0)
      {
          exec_vuln();
      }
      else
      {
          wpid = wait(&status);
          if (wpid == -1)
          {
              fprintf(stderr,"[-] %s: wait()\n",strerror(errno));
              return 1;
          }
          else if (wpid != pid)
              abort();
          else
          {
              if (WIFEXITED(status))
              {
                  fprintf(stdout,"[+] Exited: shell's ret code = %d\n",WEXITSTATUS(status));
                  return WEXITSTATUS(status);
              }
              else if (WIFSIGNALED(status))
                  return WTERMSIG(status);
              else
                  fprintf(stderr,"[-] Stopped.\n");
          }
      }
      return 1;
}
