; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_23738.c_tease.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_23738.c_tease.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"[-] %s: Failed to fork()\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"[-] %s: wait()\0A\00", align 1
@stdout = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [35 x i8] c"[+] Exited: shell's ret code = %d\0A\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"[-] Stopped.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tease() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = call i32 (...) @fork()
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = icmp eq i32 %6, -1
  br i1 %7, label %8, label %14

8:                                                ; preds = %0
  %9 = load i32, i32* @stderr, align 4
  %10 = load i32, i32* @errno, align 4
  %11 = call i8* @strerror(i32 %10)
  %12 = call i32 (i32, i8*, ...) @fprintf(i32 %9, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %11)
  %13 = call i32 @exit(i32 13) #3
  unreachable

14:                                               ; preds = %0
  %15 = load i32, i32* %2, align 4
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %14
  %18 = call i32 (...) @exec_vuln()
  br label %59

19:                                               ; preds = %14
  %20 = call i32 @wait(i32* %4)
  store i32 %20, i32* %3, align 4
  %21 = load i32, i32* %3, align 4
  %22 = icmp eq i32 %21, -1
  br i1 %22, label %23, label %28

23:                                               ; preds = %19
  %24 = load i32, i32* @stderr, align 4
  %25 = load i32, i32* @errno, align 4
  %26 = call i8* @strerror(i32 %25)
  %27 = call i32 (i32, i8*, ...) @fprintf(i32 %24, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8* %26)
  store i32 1, i32* %1, align 4
  br label %61

28:                                               ; preds = %19
  %29 = load i32, i32* %3, align 4
  %30 = load i32, i32* %2, align 4
  %31 = icmp ne i32 %29, %30
  br i1 %31, label %32, label %34

32:                                               ; preds = %28
  %33 = call i32 (...) @abort() #3
  unreachable

34:                                               ; preds = %28
  %35 = load i32, i32* %4, align 4
  %36 = call i64 @WIFEXITED(i32 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %45

38:                                               ; preds = %34
  %39 = load i32, i32* @stdout, align 4
  %40 = load i32, i32* %4, align 4
  %41 = call i32 @WEXITSTATUS(i32 %40)
  %42 = call i32 (i32, i8*, ...) @fprintf(i32 %39, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0), i32 %41)
  %43 = load i32, i32* %4, align 4
  %44 = call i32 @WEXITSTATUS(i32 %43)
  store i32 %44, i32* %1, align 4
  br label %61

45:                                               ; preds = %34
  %46 = load i32, i32* %4, align 4
  %47 = call i64 @WIFSIGNALED(i32 %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %52

49:                                               ; preds = %45
  %50 = load i32, i32* %4, align 4
  %51 = call i32 @WTERMSIG(i32 %50)
  store i32 %51, i32* %1, align 4
  br label %61

52:                                               ; preds = %45
  %53 = load i32, i32* @stderr, align 4
  %54 = call i32 (i32, i8*, ...) @fprintf(i32 %53, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  br label %55

55:                                               ; preds = %52
  br label %56

56:                                               ; preds = %55
  br label %57

57:                                               ; preds = %56
  br label %58

58:                                               ; preds = %57
  br label %59

59:                                               ; preds = %58, %17
  br label %60

60:                                               ; preds = %59
  store i32 1, i32* %1, align 4
  br label %61

61:                                               ; preds = %60, %49, %38, %23
  %62 = load i32, i32* %1, align 4
  ret i32 %62
}

declare dso_local i32 @fork(...) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i8* @strerror(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @exec_vuln(...) #1

declare dso_local i32 @wait(i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i64 @WIFEXITED(i32) #1

declare dso_local i32 @WEXITSTATUS(i32) #1

declare dso_local i64 @WIFSIGNALED(i32) #1

declare dso_local i32 @WTERMSIG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
